Infrastructure/Containers/Orchestration (Kubernetes, Swarm)/kubernetes/configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
